--- a/exercise/exercise8/ios/GoogleService-Info.plist
+++ b/exercise/exercise8/ios/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.964981185799-gu4h99qokp3dc995vf6vljhbp2jid9o8</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCzCFYR80-vOC-Gn9di-U1WQYcYuzWkhbk</string>
+	<string> </string>
 	<key>GCM_SENDER_ID</key>
 	<string>964981185799</string>
 	<key>PLIST_VERSION</key>
